mutants.out/log/src__proto__single__mod.rs_line_181_col_9.log

*** src/proto/single/mod.rs:181:9: replace JobBuilder::add_to_custom_data -> &mut Self with Box::leak(Box::new(Default::default()))

*** mutation diff:
--- src/proto/single/mod.rs
+++ replace JobBuilder::add_to_custom_data -> &mut Self with Box::leak(Box::new(Default::default()))
@@ -173,19 +173,17 @@
     }
 
     /// Sets arbitrary key-value pairs to this job's custom data hash.
     pub fn add_to_custom_data(
         &mut self,
         k: impl Into<String>,
         v: impl Into<serde_json::Value>,
     ) -> &mut Self {
-        let custom = self.custom.get_or_insert_with(HashMap::new);
-        custom.insert(k.into(), v.into());
-        self
+        Box::leak(Box::new(Default::default())) /* ~ changed by cargo-mutants ~ */
     }
 
     /// Builds a new [`Job`] from the parameters of this builder.
     ///
     /// For Enterprise edition of Faktory builds a new _trackable_ `Job`.
     /// In Enterprise Faktory, a progress update can be sent and received only for the jobs
     /// that have been explicitly marked as trackable via `"track":1` in the job's custom hash.
     /// In case you have a reason to opt out of tracking, either unset (remove) the "track" on


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-3ziugm.tmp/Cargo.toml
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-3ziugm.tmp)
error[E0277]: the trait bound `JobBuilder: Default` is not satisfied
   --> src/proto/single/mod.rs:181:28
    |
181 |         Box::leak(Box::new(Default::default())) /* ~ changed by cargo-mutants ~ */
    |                            ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `JobBuilder`
    |
help: consider annotating `JobBuilder` with `#[derive(Default)]`
    |
65  | #[derive(Serialize, Deserialize, Debug, Clone, #[derive(Default)]
    |                                                ++++++++++++++++++

For more information about this error, try `rustc --explain E0277`.
error: could not compile `faktory` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `single::JobBuilder: Default` is not satisfied
   --> src/proto/single/mod.rs:181:28
    |
181 |         Box::leak(Box::new(Default::default())) /* ~ changed by cargo-mutants ~ */
    |                            ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `single::JobBuilder`
    |
help: consider annotating `single::JobBuilder` with `#[derive(Default)]`
    |
65  | #[derive(Serialize, Deserialize, Debug, Clone, #[derive(Default)]
    |                                                ++++++++++++++++++

error: could not compile `faktory` (lib test) due to 1 previous error

*** result: Failure(101)
